--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-calling-private-function"
 version = "0.1.0"
-authors = ["rafaelkonrath <rafael.konrath@vortexa.com>"]
+authors = ["rafaelkonrath <rafael.konrath@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
